--- a/src/app/speech/speech.component.html
+++ b/src/app/speech/speech.component.html
@@ -1,4 +1,4 @@
-<!--<div class="container-fluid" (keyUp.Space)="activateSpeechSearchMovie2($event)">
+<div class="container-fluid">
     <div class="row">
         <div class="col-lg-12 col-md-12">
             <div class="card">
@@ -10,33 +10,38 @@
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
                             <div class="form-group">
-                                <label></label>-->
-                                <!--<input type="text" class="form-control border-input" name="txtSpeechSearchMovieName" id="txtSpeechSearchMovieName" value=""
-                                       placeholder="Click below button and then say something!!!" [(ngModel)]="speechData">-->
-                           <!-- </div>
+                                <label></label>
+                                <input type="text" class="form-control border-input" name="txtSpeechSearchMovieName"
+                                    id="txtSpeechSearchMovieName" value=""
+                                    placeholder="Click below button and then say something!!!" [(ngModel)]="speechData">
+                            </div>
                         </div>
                         <div class="col-md-2"></div>
                     </div>
                     <br />
-                    <div class="text-center">-->
-                       <!-- <button class="btn btn-info btn-fill btn-wd" name="btnActivateSpeechSearchMovie" id="btnActivateSpeechSearchMovie" (click)="activateSpeechSearchMovie()"
-                                [disabled]="!showSearchButton">
+                    <div class="text-center">
+                        <button class="btn btn-info btn-fill btn-wd" name="btnActivateSpeechSearchMovie"
+                            id="btnActivateSpeechSearchMovie" (click)="activateSpeechSearchMovie()"
+                            [disabled]="!showSearchButton">
                             Enable Speech Search
-                        </button>-->
-                    <!--</div>
-                    <textarea type="text" class="form-control border-input" name="txtSpeechSearchMovieName" id="txtSpeechSearchMovieName" value=""
-                                       placeholder="Click below button and then say something!!!" [(ngModel)]="temp"></textarea>
+                        </button>
+                    </div>
+                    <textarea type="text" class="form-control border-input" name="txtSpeechSearchMovieName"
+                        id="txtSpeechSearchMovieName" value=""
+                        placeholder="Click below button and then say something!!!" [(ngModel)]="temp"></textarea>
                     <br />
-                     <div class="text-center">
-                        <button class="btn btn-info btn-fill btn-wd" name="btnActivateSpeechSearchMovie" id="btnActivateSpeechSearchMovie" (keyUp.Space)="activateSpeechSearchMovie2($event)"
-                                [disabled]="!showSearchButton2">
+                    <div class="text-center">
+                        <button class="btn btn-info btn-fill btn-wd" name="btnActivateSpeechSearchMovie"
+                            id="btnActivateSpeechSearchMovie" (click)="activateSpeechSearchMovie2()"
+                            [disabled]="!showSearchButton2">
                             Enable Speech Search
                         </button><br>
-                        <textarea type="text" class="form-control border-input" name="txtSpeechSearchMovieName" id="txtSpeechSearchMovieName" value=""
-                                       placeholder="Click below button and then say something!!!" [(ngModel)]="msg"></textarea>
+                        <textarea type="text" class="form-control border-input" name="txtSpeechSearchMovieName"
+                            id="txtSpeechSearchMovieName" value=""
+                            placeholder="Click below button and then say something!!!" [(ngModel)]="msg"></textarea>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>-->
+</div> 
